src/main/java/com/example/chosim/chosim/common/error/exception/LockerNotFound.java
package com.example.chosim.chosim.common.error.exception;

//public class LockerNotFound extends MaimuException{
//
//    private static final String MESSAGE = "CANNOT FIND LOCKER";
//
//    public LockerNotFound(){
//        super(MESSAGE);
//    }
//
//    @Override
//    public int getStatusCode() {
//        return 404;
//    }
//}

